# pelorus

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  chart-lint.yml  check-python-dependencies.yml  ci.yml  conftest.yml  doc-check.yml  integration-tests.yml  mockoon-tests.yml  pre-commit-test.yml  prometheus-rules.yml  python-formatting.yml  python-linting.yml  shellcheck.yml  test-images.yml  trigger-test-images.yml  typecheck.yml  unittests.yml
_test/: TESTING.md  bats-support-clone.sh
_test/e2e/: README.md  lib.sh  test_helm_deploy.sh  test_operator_deploy.sh
demo/: PRESALES-DEMO.md  README.md  cleanup.sh  demo-tekton.sh  install.sh  live-demo.sh  run-demo.sh  seed-metrics.sh  setup-demo.sh
demo/python-example/: Dockerfile
demo/tekton-demo-setup/: 03-rbac-pipeline-role.yaml  05-build-and-deploy.yaml  README.md
docs/: Development.md  DevelopmentChoices.md  UpstreamSupport.md  requirements.txt
docs/GettingStarted/: Installation.md  QuickstartTutorial.md
exporters/: .dockerignore  Containerfile  README.md  requirements-dev.txt  requirements.txt
exporters/committime/: README.md  __init__.py  app.py  collector_azure_devops.py  collector_base.py  collector_bitbucket.py  collector_containerimage.py  collector_gitea.py  collector_github.py  collector_gitlab.py  collector_image.py
exporters/deploytime/: README.md  __init__.py  app.py
exporters/failure/: README.md  app.py  collector_azure_devops.py  (+5 more)
mocks/: README.md  commitexporter_gitea.json  commitexporter_gitlab.json  failure_github.json  failure_jira.json
pelorus-operator/: .dockerignore  Makefile  bundle.Dockerfile
scripts/: chart-test.sh  get_tool_dl_url.py  install_dev_tools.sh  python-version-check.py  run-mockoon-tests.sh  run-pelorus-e2e-tests.sh  update_projects_version.py
(+93 files in other folders)
