[project]
name = "pelorus"
version = "0.1.0"
description = "Automate the measurement of organizational behavior"
authors = [{name = "Pelorus community"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attrs>=26.1.0",
    "azure-devops==7.1.0b4",
    "fastapi>=0.135.3",
    "git-url-parse>=1.2.2",
    "jira>=3.10.5",
    "kubernetes>=35.0.0",
    "prometheus-client>=0.24.1",
    "python-gitlab>=8.2.0",
    "requests>=2.33.1",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.44.0",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "httpx>=0.28.1",
    "isort>=8.0.1",
    "pre-commit>=4.5.1",
    "pylama[toml]>=8.4.1",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "semver>=3.0.4",
]
doc = [
    "cairosvg>=2.9.0",
    "diagrams>=0.25.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-redirects>=1.2.3",
    "pillow>=12.2.0",
    "pymdown-extensions>=10.21.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
src_paths = ["exporters" ,"scripts"]
known_first_party = ["pelorus"]

[tool.pytest.ini_options]
testpaths = ["exporters"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "mockoon: tests that should be run with mockoon running"
]
log_cli = true
addopts = [
    "--doctest-modules",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov=exporters",
]

[tool.pylama]
paths = "exporters scripts"
skip = "exporters/.eggs/*"

[tool.pylama.linter.pycodestyle]
max_line_length = 120

[[tool.pylama.files]]
path = "exporters/tests/*"
ignore= "W0401"
